--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,11 @@
         "tomatophp/filament-icons": "^1.1",
         "tomatophp/filament-invoices": "^1.0",
         "tomatophp/filament-language-switcher": "^1.0",
+        "tomatophp/filament-locations": "^1.0",
         "tomatophp/filament-menus": "^1.0",
         "tomatophp/filament-settings-hub": "^2.0",
-        "tomatophp/filament-users": "^2.0"
+        "tomatophp/filament-users": "^2.0",
+        "ysfkaya/filament-phone-input": "^3.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
