--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "filament/widgets": "^3.3",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "opcodesio/log-viewer": "^3.18",
         "oriondevelops/filament-greeter": "^0.2.2",
         "spatie/laravel-medialibrary": "^11.12",
         "spatie/laravel-translatable": "^6.11",
@@ -26,6 +27,7 @@
         "ysfkaya/filament-phone-input": "^3.1"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.15",
         "fakerphp/faker": "^1.23",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.13",
