--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "filament/spatie-laravel-translatable-plugin": "^3.3",
         "filament/widgets": "^3.3",
         "laravel/framework": "^12.0",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "opcodesio/log-viewer": "^3.18",
         "oriondevelops/filament-greeter": "^0.2.2",
