implemented middleware to check for the validity of our api token

--- a/.env.example
+++ b/.env.example
@@ -68,3 +68,5 @@ MY_FATOORAH_API_KEY=rLtt6JWvbUHDDhsZnfpAhpYk4dxYDQkbcPTyGaKp2TYqQgG7FGZ5Th_WD53O
 VITE_APP_NAME="${APP_NAME}"
 
 INVOICE_VAT_PERCENTAGE=15
+
+STATIC_API_TOKEN=
